--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(ocltest main.cpp)
+target_link_libraries(ocltest OpenCL)
